--- a/cyjs-2.7.html
+++ b/cyjs-2.7.html
@@ -10,6 +10,8 @@
       #cy { position: absolute; left: 0; right: 0; top: 0; bottom: 0; }
     </style>
 
+    <script src="bluebird.min.js"></script>
+    <script src="fetch.js"></script>
     <script src="cytoscape-2.7.0-beta1.min.js"></script>
 
     <script>
