add 10,000 eles examples

--- a/cyjs-2.7.html
+++ b/cyjs-2.7.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Cytoscape.js 2.7</title>
+    <title>Cytoscape.js 2.7 (6,000 elements)</title>
 
     <style>
       html, body { margin: 0; padding: 0; font: 12pt helvetica neue, helvetica, liberation sans, sans-serif; line-height: 1; }
@@ -63,7 +63,7 @@
   </head>
 
   <body>
-    <h1>Cytoscape.js 2.7</h1>
+    <h1>Cytoscape.js 2.7 (6,000 elements)</h1>
     <div id="cy"></div>
   </body>
 
