--- a/cyjs-2.7-eles10000.html
+++ b/cyjs-2.7-eles10000.html
@@ -22,7 +22,7 @@
       });
 
       var getGraph = function(){
-        var file = './NB_selected_edges_2.json';
+        var file = './NB_selected_edges_2_10000.json';
 
         return fetch( file ).then(function( response ){
           return response.json();
