All src scripts are now from unpkg

--- a/cyjs-3.2.10.html
+++ b/cyjs-3.2.10.html
@@ -12,12 +12,12 @@
       #cy { position: absolute; left: 0; right: 0; top: 53px; bottom: 0; }
     </style>
 
-    <script src="bluebird.min.js"></script>
-    <script src="fetch.js"></script>
-    <script src="cytoscape-3.2.10.min.js"></script>
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://unpkg.com/bluebird@3.5.1/js/browser/bluebird.min.js"></script>
+    <script src="https://unpkg.com/whatwg-fetch@2.0.4/fetch.js"></script>
+    <script src="https://unpkg.com/cytoscape@3.2.10/dist/cytoscape.min.js"></script>
+    <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.min.js"></script>
 
-    <script src="./arbor.js"></script>
+    <script src="https://unpkg.com/cytoscape-arbor/arbor.js"></script>
     <script src="https://unpkg.com/cytoscape-arbor/cytoscape-arbor.js"> </script>
 
 		<script src="https://unpkg.com/webcola/WebCola/cola.min.js"></script>
@@ -25,18 +25,18 @@
 
     <script src="https://unpkg.com/cytoscape-cose-bilkent/cytoscape-cose-bilkent.js"> </script>
 
-    <script src="https://unpkg.com/dagre@0.7.4/dist/dagre.js"></script>
+    <script src="https://unpkg.com/dagre/dist/dagre.js"></script>
     <script src="https://unpkg.com/cytoscape-dagre/cytoscape-dagre.js"> </script>
     
     <script src="https://unpkg.com/cytoscape-euler/cytoscape-euler.js"> </script>
 
-    <script src="https://unpkg.com/klayjs@0.4.1/klay.js"></script>
+    <script src="https://unpkg.com/klayjs/klay.js"></script>
     <script src="https://unpkg.com/cytoscape-klay/cytoscape-klay.js"> </script>
 
-		<script src="https://unpkg.com/weaverjs@1.2.0/dist/weaver.min.js"></script>
+		<script src="https://unpkg.com/weaverjs/dist/weaver.min.js"></script>
     <script src="https://unpkg.com/cytoscape-spread/cytoscape-spread.js"></script>
   
-    <script src="https://cdn.rawgit.com/dhotson/springy/2.7.1/springy.js"></script>
+    <script src="https://unpkg.com/springy@2.8.0/springy.js"></script>
     <script src="https://unpkg.com/cytoscape-springy/cytoscape-springy.js"></script>
     
     <script>
